--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,11 +14,14 @@
 		"lint:fix": "eslint lib/**/*.ts --fix"
 	},
 	"dependencies": {
+		"@fastify/cors": "^11.1.0",
 		"@fastify/jwt": "^10.0.0",
+		"@fastify/rate-limit": "^10.3.0",
 		"@fastify/type-provider-typebox": "^5.2.0",
 		"@sinclair/typebox": "^0.34.39",
 		"dotenv": "^17.2.1",
-		"fastify": "^5.5.0"
+		"fastify": "^5.5.0",
+		"fastify-plugin": "^5.0.1"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "*",
