--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
+		"@fastify/helmet": "^13.0.1",
 		"@fastify/jwt": "^10.0.0",
 		"@fastify/rate-limit": "^10.3.0",
 		"@fastify/type-provider-typebox": "^5.2.0",
