implement db, some configs, some refactoring

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -4,3 +4,11 @@ PORT=8023
 # Auth
 JWT_SECRET=thisisa32characterlongjwtsecrett
 JWT_EXPIRES_IN=2d
+
+# DB
+POSTGRES_DB=shortn
+POSTGRES_HOST=localhost
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_PORT=5432
+DATABASE_URL=postgresql://user:password@localhost:5432/shortn
