--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,4 +1,8 @@
 NODE_ENV=development
+
+# HTTP
+BASE_URL=http://localhost:8023
+CLIENT_URL=http://localhost:3023
 PORT=8023
 
 # Auth
@@ -6,9 +10,4 @@ JWT_SECRET=thisisa32characterlongjwtsecrett
 JWT_EXPIRES_IN=2d
 
 # DB
-POSTGRES_DB=shortn
-POSTGRES_HOST=localhost
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_PORT=5432
 DATABASE_URL=postgresql://user:password@localhost:5432/shortn
