--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@repo/typescript-config/tsconfig.server.json",
+	"extends": "@repo/typescript-config/tsconfig.api.json",
 	"compilerOptions": {
 		"baseUrl": ".",
 		"outDir": "dist",
