update db scripts

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,7 +12,8 @@
 		"check-types": "tsc --noEmit",
 		"lint": "eslint",
 		"lint:fix": "eslint --fix",
-		"generate:db": "kysely-codegen"
+		"db:generate": "kysely-codegen",
+		"db:migrate": "kysely migrate:latest"
 	},
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
@@ -25,6 +26,7 @@
 		"fastify": "^5.5.0",
 		"fastify-plugin": "^5.0.1",
 		"kysely": "^0.28.5",
+		"kysely-ctl": "^0.16.0",
 		"pg": "^8.16.3"
 	},
 	"devDependencies": {
@@ -35,7 +37,6 @@
 		"esbuild": "^0.25.9",
 		"eslint": "^9.33.0",
 		"kysely-codegen": "^0.18.5",
-		"kysely-ctl": "^0.16.0",
 		"tsx": "^4.17.0",
 		"typescript": "^5.5.4"
 	}
