--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
-name: api
+name: shortn
 
 on:
   push:
-    paths: ["apps/api/**", ".github/**"]
     branches: [master]
 
 jobs:
@@ -28,10 +27,10 @@ jobs:
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn workspace api install
+        run: yarn install
 
       - name: Check Types
-        run: yarn workspace api check-types
+        run: yarn check-types
 
   lint:
     name: lint
@@ -56,15 +55,46 @@ jobs:
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn workspace api install
+        run: yarn install
 
       - name: Lint Code
-        run: yarn workspace api lint
+        run: yarn lint
 
-  deploy:
-    name: deploy
+  build:
+    name: build
     runs-on: ubuntu-latest
     needs: lint
+    # env:
+    #   VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL}}
+    #   VITE_PORT: ${{ vars.VITE_PORT }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v4.4.0
+        with:
+          node-version-file: ".nvmrc"
+
+      - name: Cache node_modules
+        uses: actions/cache@v4.2.3
+        id: yarn-cache
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
+
+      - name: Build
+        run: yarn build
+
+  deploy-api:
+    name: deploy-api
+    runs-on: ubuntu-latest
+    needs: build
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
@@ -74,3 +104,17 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: railway up --service=${{ env.SVC_ID }}
+
+  # deploy-client:
+  #   name: deploy-client
+  #   runs-on: ubuntu-latest
+  #   needs: [build, deploy-api]
+  #   container: ghcr.io/railwayapp/cli:latest
+  #   environment: production
+  #   env:
+  #     SVC_ID: ${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
+  #     RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+
+  #     - run: railway up --service=${{ env.SVC_ID }}
