--- a/packages/typescript-config/tsconfig.client.json
+++ b/packages/typescript-config/tsconfig.client.json
@@ -2,11 +2,12 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": "./tsconfig.base.json",
 	"compilerOptions": {
-		"plugins": [{ "name": "next" }],
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
 		"allowJs": true,
-		"jsx": "preserve",
-		"noEmit": true
+		"checkJs": true,
+		"noEmit": true,
+		"types": ["vite/client"],
+		"verbatimModuleSyntax": true
 	}
 }
