--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"typescript": "5.9.2"
 	},
 	"engines": {
-		"node": ">=18"
+		"node": "24"
 	},
 	"packageManager": "yarn@1.22.22",
 	"workspaces": [
