--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,6 +66,7 @@ jobs:
     needs: lint
     env:
       VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL}}
+      VITE_API_BASE_URL_SERVER: ${{ vars.VITE_API_BASE_URL_SERVER}}
       VITE_PORT: ${{ vars.VITE_PORT }}
     steps:
       - uses: actions/checkout@v3
@@ -108,7 +109,7 @@ jobs:
   deploy-client:
     name: deploy-client
     runs-on: ubuntu-latest
-    needs: [build, deploy-api]
+    needs: build
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
