--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     env:
+      VITE_CLIENT_HOST: ${{ vars.VITE_CLIENT_HOST }}
       VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL}}
       VITE_API_BASE_URL_SERVER: ${{ vars.VITE_API_BASE_URL_SERVER}}
       VITE_PORT: ${{ vars.VITE_PORT }}
