--- a/.env.prod
+++ b/.env.prod
@@ -21,6 +21,8 @@ JWT_EXPIRES_IN=2d
 DATABASE_URL=postgresql://user:password@postgres:5432/shortn
 
 ### CLIENT ###
+VITE_CLIENT_HOST=localhost
+VITE_CLIENT_URL=http://localhost:3023
 VITE_API_BASE_URL=http://localhost:8023
 VITE_API_BASE_URL_SERVER=http://api:8023
 VITE_PORT=3023
