--- a/apps/client/.env.example
+++ b/apps/client/.env.example
@@ -1,4 +1,5 @@
 VITE_CLIENT_HOST=localhost
+VITE_CLIENT_URL=http://localhost:3023
 VITE_API_BASE_URL=http://localhost:8023
 VITE_API_BASE_URL_SERVER=http://localhost:8023
 VITE_PORT=3023
