--- a/apps/client/Dockerfile
+++ b/apps/client/Dockerfile
@@ -36,12 +36,14 @@ WORKDIR /app/apps/client
 
 # Build arguments for environment variables - Railway will inject these
 ARG VITE_CLIENT_HOST
+ARG VITE_CLIENT_URL
 ARG VITE_API_BASE_URL
 ARG VITE_API_BASE_URL_SERVER
 ARG VITE_PORT
 
 # Set environment variables for build
 ENV VITE_CLIENT_HOST=$VITE_CLIENT_HOST
+ENV VITE_CLIENT_URL=$VITE_CLIENT_URL
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 ENV VITE_API_BASE_URL_SERVER=$VITE_API_BASE_URL_SERVER
 ENV VITE_PORT=$VITE_PORT
