--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -45,6 +45,8 @@ services:
       context: .
       dockerfile: apps/client/Dockerfile.dev
       args:
+        VITE_CLIENT_HOST: ${VITE_CLIENT_HOST:-localhost}
+        VITE_CLIENT_URL: ${VITE_CLIENT_URL:-http://localhost:3023}
         VITE_API_BASE_URL: ${API_BASE_URL:-http://localhost:8023}
         VITE_API_BASE_URL_SERVER: ${API_BASE_URL_SERVER:-http://api:8023}
         VITE_PORT: 3023
