--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,30 @@ on:
     branches: [master]
 
 jobs:
+  changes:
+    name: Detect changes
+    runs-on: ubuntu-latest
+    outputs:
+      api: ${{ steps.changes.outputs.api }}
+      client: ${{ steps.changes.outputs.client }}
+      shared: ${{ steps.changes.outputs.shared }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            api:
+              - 'apps/api/**'
+            client:
+              - 'apps/client/**'
+            shared:
+              - 'packages/**'
+              - 'package.json'
+              - 'yarn.lock'
+              - 'turbo.json'
+              - '.nvmrc'
   check-types:
     name: check-types
     runs-on: ubuntu-latest
@@ -97,7 +121,8 @@ jobs:
   deploy-api:
     name: deploy-api
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, changes]
+    if: needs.changes.outputs.api == 'true' || needs.changes.outputs.shared == 'true'
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
@@ -111,7 +136,8 @@ jobs:
   deploy-client:
     name: deploy-client
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, changes]
+    if: needs.changes.outputs.client == 'true' || needs.changes.outputs.shared == 'true'
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
