--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   changes:
-    name: Detect changes
+    name: detect-changes
     runs-on: ubuntu-latest
     outputs:
       api: ${{ steps.changes.outputs.api }}
@@ -14,7 +14,6 @@ jobs:
       shared: ${{ steps.changes.outputs.shared }}
     steps:
       - uses: actions/checkout@v3
-
       - uses: dorny/paths-filter@v2
         id: changes
         with:
@@ -29,17 +28,16 @@ jobs:
               - 'yarn.lock'
               - 'turbo.json'
               - '.nvmrc'
-  check-types:
-    name: check-types
+
+  setup:
+    name: setup
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup node
         uses: actions/setup-node@v4.4.0
         with:
           node-version-file: ".nvmrc"
-
       - name: Cache node_modules
         uses: actions/cache@v4.2.3
         id: yarn-cache
@@ -48,46 +46,50 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install
 
+  check-types:
+    name: check-types
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v4.4.0
+        with:
+          node-version-file: ".nvmrc"
+      - name: Restore cache
+        uses: actions/cache@v4.2.3
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Check Types
         run: yarn check-types
 
   lint:
     name: lint
     runs-on: ubuntu-latest
-    needs: check-types
+    needs: setup
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup node
         uses: actions/setup-node@v4.4.0
         with:
           node-version-file: ".nvmrc"
-
-      - name: Cache node_modules
+      - name: Restore cache
         uses: actions/cache@v4.2.3
-        id: yarn-cache
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn install
-
       - name: Lint Code
         run: yarn lint
 
   build:
     name: build
     runs-on: ubuntu-latest
-    needs: lint
+    needs: [setup, check-types, lint]
     env:
       VITE_CLIENT_HOST: ${{ vars.VITE_CLIENT_HOST }}
       VITE_CLIENT_URL: ${{ vars.VITE_CLIENT_URL }}
@@ -96,25 +98,15 @@ jobs:
       VITE_PORT: ${{ vars.VITE_PORT }}
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup node
         uses: actions/setup-node@v4.4.0
         with:
           node-version-file: ".nvmrc"
-
-      - name: Cache node_modules
+      - name: Restore cache
         uses: actions/cache@v4.2.3
-        id: yarn-cache
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn install
-
       - name: Build
         run: yarn build
 
@@ -126,12 +118,12 @@ jobs:
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
-      SVC_ID: ${{ vars.RAILWAY_API_SERVICE_ID }}
+      SERVICE_ID: ${{ vars.RAILWAY_API_SERVICE_ID }}
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
     steps:
       - uses: actions/checkout@v3
-
-      - run: railway up --service=${{ env.SVC_ID }}
+      - name: Deploy API
+        run: railway up --service=${{ env.SERVICE_ID}}
 
   deploy-client:
     name: deploy-client
@@ -141,9 +133,9 @@ jobs:
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
-      SVC_ID: ${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
+      SERVICE_ID: ${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
     steps:
       - uses: actions/checkout@v3
-
-      - run: railway up --service=${{ env.SVC_ID }}
+      - name: Deploy Client
+        run: railway up --service=${{ env.SERVICE_ID }}
