--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,16 +86,12 @@ jobs:
       - name: Lint Code
         run: yarn lint
 
-  build:
-    name: build
+  build-api:
+    name: build-api
     runs-on: ubuntu-latest
     needs: [setup, check-types, lint]
     env:
-      VITE_CLIENT_HOST: ${{ vars.VITE_CLIENT_HOST }}
-      VITE_CLIENT_URL: ${{ vars.VITE_CLIENT_URL }}
-      VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL}}
-      VITE_API_BASE_URL_SERVER: ${{ vars.VITE_API_BASE_URL_SERVER}}
-      VITE_PORT: ${{ vars.VITE_PORT }}
+      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -108,18 +104,44 @@ jobs:
           path: "**/node_modules"
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Build
-        run: yarn build
+        run: |
+          yarn global add @railway/cli
+          railway link --project shortn --service api
+          railway run yarn build:api
+
+  build-client:
+    name: build-client
+    runs-on: ubuntu-latest
+    needs: [setup, check-types, lint]
+    env:
+      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v4.4.0
+        with:
+          node-version-file: ".nvmrc"
+      - name: Restore cache
+        uses: actions/cache@v4.2.3
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+      - name: Build
+        run: |
+          yarn global add @railway/cli
+          railway link --project shortn --service client
+          railway run yarn build:client
 
   deploy-api:
     name: deploy-api
     runs-on: ubuntu-latest
-    needs: [build, changes]
+    needs: [build-api, changes]
     if: needs.changes.outputs.api == 'true' || needs.changes.outputs.shared == 'true'
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
       SERVICE_ID: ${{ vars.RAILWAY_API_SERVICE_ID }}
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - name: Deploy API
@@ -128,13 +150,13 @@ jobs:
   deploy-client:
     name: deploy-client
     runs-on: ubuntu-latest
-    needs: [build, changes]
+    needs: [build-client, changes]
     if: needs.changes.outputs.client == 'true' || needs.changes.outputs.shared == 'true'
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
       SERVICE_ID: ${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
     steps:
       - uses: actions/checkout@v3
       - name: Deploy Client
