--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:13.22-alpine
-    container_name: shortn_postgres_prod
+    container_name: shortn-prod-postgres
     env_file:
       - .env.local.prod
     environment:
@@ -16,16 +16,29 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - postgres_data_prod:/var/lib/postgresql/data
+      - postgres-dev-data:/var/lib/postgresql/data
     networks:
-      - shortn-network
+      - shortn-prod-network
     restart: unless-stopped
+
+  redis:
+    image: redis:8.2-alpine
+    container_name: shortn-prod-redis
+    command: ["redis-server", "--requirepass", "password"]
+    env_file:
+      - .env.local.dev
+    ports:
+      - 6379:6379
+    volumes:
+      - redis-dev-data:/data
+    networks:
+      - shortn-prod-network
 
   api:
     build:
       context: .
       dockerfile: apps/api/Dockerfile
-    container_name: shortn_api_prod
+    container_name: shortn-prod-api
     env_file:
       - .env.local.prod
     ports:
@@ -34,7 +47,7 @@ services:
       postgres:
         condition: service_healthy
     networks:
-      - shortn-network
+      - shortn-prod-network
     restart: unless-stopped
     deploy:
       resources:
@@ -53,7 +66,7 @@ services:
         VITE_API_BASE_URL: ${API_BASE_URL:-http://localhost:8023}
         VITE_API_BASE_URL_SERVER: ${API_BASE_URL:-http://localhost:8023}
         VITE_PORT: 3023
-    container_name: shortn_client_prod
+    container_name: shortn-prod-client
     env_file:
       - .env.local.prod
     ports:
@@ -61,7 +74,7 @@ services:
     depends_on:
       - api
     networks:
-      - shortn-network
+      - shortn-prod-network
     restart: unless-stopped
     deploy:
       resources:
@@ -71,7 +84,8 @@ services:
           memory: 128M
 
 volumes:
-  postgres_data_prod:
+  postgres-dev-data:
+  redis-dev-data:
 
 networks:
-  shortn-network:
+  shortn-prod-network:
