--- a/.env.local.dev
+++ b/.env.local.dev
@@ -9,7 +9,7 @@ NODE_ENV=development
 
 # HTTP
 HOST=0.0.0.0
-BASE_URL=localhost
+BASE_URL=http://localhost:8023
 CLIENT_URL=http://localhost:3023
 PORT=8023
 
@@ -19,6 +19,7 @@ JWT_EXPIRES_IN=2d
 
 # Database
 DATABASE_URL=postgresql://user:password@postgres:5432/shortn
+REDIS_URL=redis://:password@redis:6379/0
 
 ### CLIENT ###
 VITE_CLIENT_HOST=localhost
