--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,6 +109,22 @@ jobs:
           railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_API_SERVICE_ID}}
           railway run yarn build:api
 
+  deploy-api:
+    name: deploy-api
+    runs-on: ubuntu-latest
+    needs: [build-api, changes]
+    if: needs.changes.outputs.api == 'true' || needs.changes.outputs.shared == 'true'
+    container: ghcr.io/railwayapp/cli:latest
+    environment: production
+    env:
+      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy API
+        run: |
+          railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_API_SERVICE_ID}}
+          railway up
+
   build-client:
     name: build-client
     runs-on: ubuntu-latest
@@ -132,20 +148,6 @@ jobs:
           railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
           railway run yarn build:client
 
-  deploy-api:
-    name: deploy-api
-    runs-on: ubuntu-latest
-    needs: [build-api, changes]
-    if: needs.changes.outputs.api == 'true' || needs.changes.outputs.shared == 'true'
-    container: ghcr.io/railwayapp/cli:latest
-    environment: production
-    env:
-      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy API
-        run: railway up --service=${{ vars.RAILWAY_API_SERVICE_ID }}
-
   deploy-client:
     name: deploy-client
     runs-on: ubuntu-latest
@@ -158,4 +160,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Deploy Client
-        run: railway up --service=${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
+        run: |
+          railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
+          railway up
