--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,8 @@
 		"fastify-plugin": "^5.0.1",
 		"kysely": "^0.28.5",
 		"kysely-ctl": "^0.16.0",
-		"pg": "^8.16.3"
+		"pg": "^8.16.3",
+		"redis": "^5.8.2"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "0.0.1",
