implement caching, add close and error hooks

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,6 +27,11 @@ services:
     command: ["redis-server", "--requirepass", "password"]
     env_file:
       - .env.local.dev
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 2s
+      timeout: 3s
+      retries: 5
     ports:
       - 6379:6379
     volumes:
