--- a/.env.local.prod
+++ b/.env.local.prod
@@ -5,7 +5,7 @@ POSTGRES_PASSWORD=password
 POSTGRES_PORT=5432
 
 ### API ###
-NODE_ENV=development
+NODE_ENV=production
 
 # HTTP
 HOST=0.0.0.0
@@ -22,6 +22,7 @@ DATABASE_URL=postgresql://user:password@postgres:5432/shortn
 REDIS_URL=redis://:password@redis:6379/0
 
 ### CLIENT ###
+VITE_MODE=production
 VITE_CLIENT_HOST=localhost
 VITE_CLIENT_URL=http://localhost:3024
 VITE_API_BASE_URL=http://localhost:3124
