--- a/.env.local.dev
+++ b/.env.local.dev
@@ -22,6 +22,7 @@ DATABASE_URL=postgresql://user:password@postgres:5432/shortn
 REDIS_URL=redis://:password@redis:6379/0
 
 ### CLIENT ###
+VITE_MODE=development
 VITE_CLIENT_HOST=localhost
 VITE_CLIENT_URL=http://localhost:3024
 VITE_API_BASE_URL=http://localhost:3124
