--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -66,6 +66,7 @@ services:
       context: .
       dockerfile: apps/client/Dockerfile
       args:
+        VITE_MODE: ${VITE_MODE:-production}
         VITE_CLIENT_HOST: ${VITE_CLIENT_HOST:-localhost}
         VITE_CLIENT_URL: ${VITE_CLIENT_URL:-http://localhost:3024}
         VITE_API_BASE_URL: ${API_BASE_URL:-http://localhost:3124}
