add new env variable

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -44,6 +44,7 @@ WORKDIR /app
 
 
 ARG NODE_ENV
+ARG APP_ENV
 ARG HOST
 ARG BASE_URL
 ARG CLIENT_URL
@@ -81,6 +82,7 @@ USER apiuser
 
 # Set environment variables from build args
 ENV NODE_ENV=$NODE_ENV
+ENV APP_ENV=$APP_ENV
 ENV HOST=$HOST
 ENV BASE_URL=$BASE_URL
 ENV CLIENT_URL=$CLIENT_URL
