--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
   setup:
     name: setup
     runs-on: ubuntu-latest
+    if: needs.changes.outputs.client == 'true' || needs.changes.outputs.api == 'true' || needs.changes.outputs.shared == 'true'
+    needs: changes
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -89,7 +91,8 @@ jobs:
   build-api:
     name: build-api
     runs-on: ubuntu-latest
-    needs: [setup, check-types, lint]
+    if: needs.changes.outputs.api == 'true' || needs.changes.outputs.shared == 'true'
+    needs: [setup, check-types, lint, changes]
     env:
       RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
     steps:
@@ -112,8 +115,7 @@ jobs:
   deploy-api:
     name: deploy-api
     runs-on: ubuntu-latest
-    needs: [build-api, changes]
-    if: needs.changes.outputs.api == 'true' || needs.changes.outputs.shared == 'true'
+    needs: [build-api]
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
@@ -128,7 +130,8 @@ jobs:
   build-client:
     name: build-client
     runs-on: ubuntu-latest
-    needs: [setup, check-types, lint]
+    if: needs.changes.outputs.client == 'true' || needs.changes.outputs.shared == 'true'
+    needs: [setup, check-types, lint, changes]
     env:
       RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
     steps:
@@ -151,8 +154,7 @@ jobs:
   deploy-client:
     name: deploy-client
     runs-on: ubuntu-latest
-    needs: [build-client, changes]
-    if: needs.changes.outputs.client == 'true' || needs.changes.outputs.shared == 'true'
+    needs: [build-client]
     container: ghcr.io/railwayapp/cli:latest
     environment: production
     env:
