--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,23 +16,26 @@
 		"db:migrate": "kysely migrate:latest"
 	},
 	"dependencies": {
+		"@fastify/cookie": "^11.0.2",
 		"@fastify/cors": "^11.1.0",
 		"@fastify/helmet": "^13.0.1",
 		"@fastify/jwt": "^10.0.0",
 		"@fastify/rate-limit": "^10.3.0",
-		"@fastify/type-provider-typebox": "^5.2.0",
-		"@sinclair/typebox": "^0.34.39",
+		"bcrypt": "^6.0.0",
 		"dotenv": "^17.2.1",
 		"fastify": "^5.5.0",
 		"fastify-plugin": "^5.0.1",
+		"fastify-type-provider-zod": "^6.0.0",
 		"kysely": "^0.28.5",
-		"kysely-ctl": "^0.16.0",
+		"kysely-ctl": "^0.19.0",
 		"pg": "^8.16.3",
-		"redis": "^5.8.2"
+		"redis": "^5.8.2",
+		"zod": "^4.1.5"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "0.0.1",
 		"@repo/typescript-config": "0.0.1",
+		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^22.5.0",
 		"@types/pg": "^8.15.5",
 		"esbuild": "^0.25.9",
