--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,16 +13,16 @@
 		"lint:fix": "eslint --fix"
 	},
 	"dependencies": {
-		"@sinclair/typebox": "^0.34.40",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
-		"svelte": "^5.0.0"
+		"svelte": "^5.0.0",
+		"zod": "^4.1.5"
 	},
 	"devDependencies": {
-		"@repo/eslint-config": "0.0.1",
-		"@repo/typescript-config": "0.0.1",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@repo/eslint-config": "0.0.1",
+		"@repo/typescript-config": "0.0.1",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
