update redis port, add allowed origins

--- a/.env.local.prod
+++ b/.env.local.prod
@@ -12,6 +12,7 @@ APP_ENV=local
 HOST=0.0.0.0
 BASE_URL=http://localhost:3124
 CLIENT_URL=http://localhost:3024
+ALLOWED_ORIGINS="http://localhost:3023"
 PORT=3124
 
 # Auth
@@ -22,7 +23,7 @@ JWT_REFRESH_EXPIRES_IN_SECONDS=86400
 
 # Database
 DATABASE_URL=postgresql://user:password@postgres:5432/shortn
-REDIS_URL=redis://:password@redis:6379/0
+REDIS_URL=redis://:password@redis:6381/0
 
 ### CLIENT ###
 VITE_MODE=production
