fix: copy timeout

--- a/.env.local.prod
+++ b/.env.local.prod
@@ -1,14 +1,8 @@
-### POSTGRES ###
-POSTGRES_DB=shortn
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_PORT=5433
-
 ### API ###
 NODE_ENV=production
-APP_ENV=local
+APP_ENV=production
 
-# HTTP
+# Http
 HOST=0.0.0.0
 BASE_URL=http://localhost:3124
 CLIENT_URL=http://localhost:3024
