--- a/.prettierrc
+++ b/.prettierrc
@@ -4,11 +4,21 @@
 	"bracketSameLine": false,
 	"bracketSpacing": true,
 	"jsxSingleQuote": false,
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	],
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"printWidth": 120,
 	"semi": true,
 	"singleAttributePerLine": true,
 	"singleQuote": false,
 	"tabWidth": 2,
+	"tailwindStylesheet": "./src/app.css",
 	"trailingComma": "none",
 	"useTabs": true
 }
