--- a/.env.local.prod
+++ b/.env.local.prod
@@ -6,6 +6,7 @@ APP_ENV=production
 HOST=0.0.0.0
 BASE_URL=http://localhost:3124
 CLIENT_URL=http://localhost:3024
+DOCS_URL=http://localhost:3124
 ALLOWED_ORIGINS="http://localhost:3023"
 PORT=3124
 
