--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,11 +21,14 @@
 		"@fastify/helmet": "^13.0.1",
 		"@fastify/jwt": "^10.0.0",
 		"@fastify/rate-limit": "^10.3.0",
+		"@fastify/swagger": "^9.5.2",
+		"@fastify/swagger-ui": "^5.2.3",
 		"bcrypt": "^6.0.0",
 		"dotenv": "^17.2.1",
 		"fastify": "^5.5.0",
 		"fastify-plugin": "^5.0.1",
 		"fastify-type-provider-zod": "^6.0.0",
+		"fastify-zod-openapi": "^5.5.0",
 		"kysely": "^0.28.5",
 		"kysely-ctl": "^0.19.0",
 		"pg": "^8.16.3",
