--- a/apps/client/Dockerfile
+++ b/apps/client/Dockerfile
@@ -40,6 +40,7 @@ ARG VITE_CLIENT_HOST
 ARG VITE_CLIENT_URL
 ARG VITE_API_BASE_URL
 ARG VITE_API_BASE_URL_SERVER
+ARG VITE_DOCS_URL
 ARG VITE_PORT
 
 # Set environment variables for build
@@ -48,6 +49,7 @@ ENV VITE_CLIENT_HOST=$VITE_CLIENT_HOST
 ENV VITE_CLIENT_URL=$VITE_CLIENT_URL
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 ENV VITE_API_BASE_URL_SERVER=$VITE_API_BASE_URL_SERVER
+ENV VITE_DOCS_URL=$VITE_DOCS_URL
 ENV VITE_PORT=$VITE_PORT
 
 # Build the SvelteKit application
