chore: remove unnecessary scripts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
 			"outputCapture": "std",
 			"internalConsoleOptions": "openOnFirstSessionStart",
 			"request": "launch",
-			"runtimeArgs": ["dev:api"],
+			"runtimeArgs": ["dev", "--filter", "api"],
 			"runtimeExecutable": "yarn",
 			"runtimeVersion": "24.0.2",
 			"skipFiles": ["<node_internals>/**"],
@@ -33,7 +33,7 @@
 			"cwd": "${workspaceRoot}",
 			"outputCapture": "std",
 			"request": "launch",
-			"runtimeArgs": ["dev:client"],
+			"runtimeArgs": ["dev", "--filter", "client"],
 			"runtimeExecutable": "yarn",
 			"runtimeVersion": "24.0.2",
 			"skipFiles": ["<node_internals>/**"],
