--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [master]
 
+concurrency:
+  group: deployment
+  cancel-in-progress: false
+
 jobs:
   changes:
     name: detect-changes
@@ -23,6 +27,7 @@ jobs:
             client:
               - 'apps/client/**'
             shared:
+              - '.github/workflows/**'
               - 'packages/**'
               - 'package.json'
               - 'yarn.lock'
@@ -110,7 +115,7 @@ jobs:
         run: |
           yarn global add @railway/cli
           railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_API_SERVICE_ID}}
-          railway run yarn build:api
+          railway run yarn build --filter api
 
   deploy-api:
     name: deploy-api
@@ -149,7 +154,7 @@ jobs:
         run: |
           yarn global add @railway/cli
           railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
-          railway run yarn build:client
+          railway run yarn build --filter client
 
   deploy-client:
     name: deploy-client
