--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"svelte": "^5.0.0",
+		"svelte-french-toast": "^1.2.0",
 		"zod": "^4.1.5"
 	},
 	"devDependencies": {
