separate change password endpoint, enhance type validations, update readme

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,9 @@ name: shortn
 
 on:
   push:
-    branches: [master]
+    branches: ["**"]
+  pull_request:
+    branches: ["**"]
 
 concurrency:
   group: deployment
