--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -1,11 +1,12 @@
-name: "Deploy"
+name: "Check PR"
 
 on:
-  push:
+  pull_request:
     branches: [master]
 
 permissions:
   contents: read
+  pull-requests: read
 
 concurrency:
   group: deployment
@@ -120,21 +121,6 @@ jobs:
           railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_API_SERVICE_ID}}
           railway run yarn build --filter api
 
-  deploy-api:
-    name: deploy-api
-    runs-on: ubuntu-latest
-    needs: [build-api]
-    container: ghcr.io/railwayapp/cli:latest
-    environment: production
-    env:
-      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Deploy API
-        run: |
-          railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_API_SERVICE_ID}}
-          railway up
-
   build-client:
     name: build-client
     runs-on: ubuntu-latest
@@ -158,18 +144,3 @@ jobs:
           yarn global add @railway/cli
           railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
           railway run yarn build --filter client
-
-  deploy-client:
-    name: deploy-client
-    runs-on: ubuntu-latest
-    needs: [build-client]
-    container: ghcr.io/railwayapp/cli:latest
-    environment: production
-    env:
-      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Deploy Client
-        run: |
-          railway link --project=${{ vars.RAILWAY_PROJECT_ID }} --service=${{ vars.RAILWAY_CLIENT_SERVICE_ID }}
-          railway up
