--- a/apps/client/Dockerfile.dev
+++ b/apps/client/Dockerfile.dev
@@ -10,8 +10,8 @@ WORKDIR /app
 COPY package.json yarn.lock ./
 COPY turbo.json ./
 
-# Copy workspace packages
-COPY packages/ packages/
+# Copy shared packages
+COPY shared/ shared/
 
 # Copy client package.json first for better caching
 COPY apps/client/package.json apps/client/
