--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -50,9 +50,7 @@ jobs:
         id: yarn-cache
         with:
           path: "**/node_modules"
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          key: ${{ runner.os }}-yarn-${{ github.run_id }}-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install
@@ -71,7 +69,7 @@ jobs:
         uses: actions/cache@v4.2.3
         with:
           path: "**/node_modules"
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ github.run_id }}-${{ hashFiles('**/yarn.lock') }}
       - name: Check Types
         run: yarn check-types
 
@@ -89,7 +87,7 @@ jobs:
         uses: actions/cache@v4.2.3
         with:
           path: "**/node_modules"
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ github.run_id }}-${{ hashFiles('**/yarn.lock') }}
       - name: Lint Code
         run: yarn lint
 
@@ -110,7 +108,7 @@ jobs:
         uses: actions/cache@v4.2.3
         with:
           path: "**/node_modules"
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ github.run_id }}-${{ hashFiles('**/yarn.lock') }}
       - name: Build
         run: |
           yarn global add @railway/cli
@@ -134,7 +132,7 @@ jobs:
         uses: actions/cache@v4.2.3
         with:
           path: "**/node_modules"
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ github.run_id }}-${{ hashFiles('**/yarn.lock') }}
       - name: Build
         run: |
           yarn global add @railway/cli
