--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,9 @@
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"extends": ["config:recommended"],
 	"assignees": ["ismailgunayy"],
+	"commitMessageExtra": "from {{currentVersion}} to {{newVersion}}",
 	"commitMessagePrefix": "deps:",
+	"labels": ["dependencies"],
 	"prHourlyLimit": 5,
 	"rangeStrategy": "bump",
 	"schedule": ["before 6am on saturday"],
